# webhook-mcp-server

./: .gitignore  CHANGELOG.md  Credits.md  LICENSE  README.md  py.typed  pyproject.toml  server.json  server.py
.github/: PUBLISHING.md
.github/workflows/: publish.yml
handlers/: __init__.py  tool_handlers.py
models/: __init__.py  schemas.py
plan/: IMPROVEMENT_PLAN.md
scripts/: __init__.py  check_webhook.py  get_temp_email.py  test_bugbounty_realworld.py  test_payload_functionality.py
services/: __init__.py  bugbounty_service.py  request_service.py  webhook_service.py
tests/: __init__.py  manual_test.py  test_bugbounty.py  test_create.py  test_integration.py  test_real_world.py  test_request_service.py  test_wait_tools.py  test_webhook_service.py
utils/: __init__.py  http_client.py  logger.py  validation.py
