[project]
name = "webhook-mcp-server"
version = "2.0.4"
description = "MCP Server for webhook.site API integration with layered architecture"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.25.0",
]

[project.scripts]
webhook-mcp-server = "server:main"

[project.urls]
Repository = "https://github.com/zebbern/webhook-mcp-server"
Homepage = "https://github.com/zebbern/webhook-mcp-server"

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=1.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["handlers", "models", "services", "utils", "scripts"]

[tool.hatch.build.targets.wheel.force-include]
"server.py" = "server.py"
"py.typed" = "py.typed"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
