[project]
name = "webhook-mcp-server"
version = "2.0.7"
description = "MCP Server for webhook.site API integration with layered architecture"
readme = "README.md"
license = {text = "MIT"}
authors = [{name = "zebbern", email = "zebbern@users.noreply.github.com"}]
keywords = ["mcp", "webhook", "testing", "model-context-protocol", "bugbounty", "api-testing"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Testing",
    "Topic :: Internet :: WWW/HTTP",
]
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.25.0",
]

[project.scripts]
webhook-mcp-server = "server:run_server"

[project.urls]
Repository = "https://github.com/zebbern/webhook-mcp-server"
Homepage = "https://github.com/zebbern/webhook-mcp-server"

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=1.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["handlers", "models", "services", "utils", "scripts"]

[tool.hatch.build.targets.wheel.force-include]
"server.py" = "server.py"
"py.typed" = "py.typed"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
